syntax = "proto2";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "modification_tag.proto";

option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.equal_all) = true;

message ActualLRPGroup {
  optional ActualLRP instance = 1;
  optional ActualLRP evacuating = 2;
}

message PortMapping {
  optional uint32 container_port = 1 [(gogoproto.nullable) = false];
  optional uint32 host_port = 2 [(gogoproto.nullable) = false];
}

message ActualLRPKey {
  optional string process_guid = 1 [(gogoproto.nullable) = false];
  optional int32 index = 2 [(gogoproto.nullable) = false];
  optional string domain = 3 [(gogoproto.nullable) = false];
}

message ActualLRPInstanceKey {
  optional string instance_guid = 1 [(gogoproto.nullable) = false];
  optional string cell_id = 2 [(gogoproto.nullable) = false];
}

message ActualLRPNetInfo {
  optional string address = 1 [(gogoproto.nullable) = false];
  repeated PortMapping ports = 2;
}

message ActualLRP {
  optional ActualLRPKey actual_lrp_key = 1 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  optional ActualLRPInstanceKey actual_lrp_instance_key = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  optional ActualLRPNetInfo actual_lrp_net_info = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "", (gogoproto.embed) = true];
  optional int32 crash_count = 4 [(gogoproto.nullable) = false];
  optional string crash_reason = 5 [(gogoproto.nullable) = false];
  optional string state = 6 [(gogoproto.nullable) = false];
  optional string placement_error = 7 [(gogoproto.nullable) = false];
  optional int64 since = 8 [(gogoproto.nullable) = false];
  optional ModificationTag modification_tag = 9;
}

message ActualLRPGroups {
  repeated ActualLRPGroup actual_lrp_groups = 1;
}

